kubernetes/go.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-getssl-go
  labels:
    app: test-getssl-go
spec:
  selector:
    matchLabels:
      app: test-getssl-go
  template:
    metadata:
      labels:
        app: test-getssl-go
    spec:
      nodeSelector:
        karpenter.sh/provisioner-name: spondemand-amd64
      containers:
        - name: test-getssl-go
          image: 063150541913.dkr.ecr.ap-northeast-1.amazonaws.com/rhems-getssl@sha256:fd087330f0047066f8433dac868a9b7326eff070592a2d5d5f0868e37f449ab3
          imagePullPolicy: IfNotPresent
          workingDir: /root
          command: ["/root/server"]
          resources:
            limits:
              cpu: 10m
              memory: 10Mi
            requests:
              cpu: 10m
              memory: 10Mi
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 3
            failureThreshold: 1
            successThreshold: 1
          volumeMounts:
            - name: acme-challenge
              mountPath: /root/acme-challenge
      volumes:
        - name: acme-challenge
          configMap:
            name: acme-challenge
            defaultMode: 0755
