kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rhems-getssl-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:063150541913:certificate/3f6636ba-7d4f-4f3a-af69-a181f535e851
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/security-groups: sg-0f93d9d9735d7f4ab
    external-dns.alpha.kubernetes.io/access: public
    external-dns.alpha.kubernetes.io/hostname: "test-getssl.rhems-labs.org"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /.well-known/acme-challenge/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: rhems-getssl-svc
                port:
                  number: 80
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: rhems-getssl-svc
                port:
                  number: 80
